--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-redux": "^8.0.4",
     "react-toastify": "^9.0.8",
     "read-excel-file": "^5.5.3",
