--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-toastify": "^9.0.8",
     "read-excel-file": "^5.5.3",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
