--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.4",
+    "react-textarea-autosize": "^8.4.0",
     "react-toastify": "^9.0.8",
     "read-excel-file": "^5.5.3",
     "redux": "^4.2.0",
